CSS fixes for header link on mobile screens down to 320px

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,6 +10,11 @@ header {
 	z-index: 5;
 }
 
+.header-section {
+	display:flex;
+	align-items: center;
+}
+
 h1 {
 	font-size: 24px;
 	margin: 0;
